--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,200;1,500&display=swap');
-@import url(//db.onlinewebfonts.com/c/d4c59187527c44f776aa329317a865b9?family=The+Sims+Sans+SC);
+@import url('http://db.onlinewebfonts.com/c/d4c59187527c44f776aa329317a865b9?family=The+Sims+Sans+SC');
 
 * {
     padding: 0;
@@ -9,7 +8,7 @@
 
 html {
     font-size: 10px;
-    font-family: "The Sims Sans SC", Times, serif ;
+    font-family: "The Sims Sans SC", Verdana, Geneva, Tahoma, sans-serif, serif ;
     scroll-behavior: smooth;
 }
 
